--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,23 @@
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+.rules::-webkit-scrollbar-track {
+  margin-top: 0;
+}
+::-webkit-scrollbar-track {
+  background: #fbfaf8;
+  border-radius: 60px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #a58453;
+  border-radius: 60px;
+}
+
 .App {
   text-align: center;
 }
